objects/Country_Presence__c.object
<CustomObject>
    <fields>
        <fullName>Banking_Country__c</fullName>
        <label>Banking Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Plan__c</fullName>
        <label>Client Plan</label>
        <referenceTo>Client_Plan__c</referenceTo>
        <relationshipLabel>Country Presence</relationshipLabel>
        <relationshipName>Country_Presents</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Engaged__c</fullName>
        <label>Engaged</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Primary Bank</fullName>
                </value>
                <value>
                    <fullName>Not Primary Bank</fullName>
                </value>
                <value>
                    <fullName>Present But Not Banking</fullName>
                </value>
                <value>
                    <fullName>Absa Not Present</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Bank__c</fullName>
        <label>Primary Bank</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Absa</fullName>
                </value>
                <value>
                    <fullName>Citibank</fullName>
                </value>
                <value>
                    <fullName>First National</fullName>
                </value>
                <value>
                    <fullName>HSBC</fullName>
                </value>
                <value>
                    <fullName>Investec</fullName>
                </value>
                <value>
                    <fullName>Nedbank</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Standard Bank</fullName>
                </value>
                <value>
                    <fullName>Standard Chart</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Country Presence</label>
    <nameField>
        <displayFormat>CP{00000}</displayFormat>
        <label>Country Presence Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Country Presence</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>